<resources>
    <string-array name="months_initials">
        <item>1</item>
        <item>F</item>
        <item>M</item>
        <item>A</item>
        <item>M</item>
        <item>J</item>
        <item>J</item>
        <item>A</item>
        <item>S</item>
        <item>O</item>
        <item>N</item>
        <item>D</item>
    </string-array>
    <string name="app_name">MONEY MAP</string>


    <string name="money_map_title">MONEY MAP</string>
    <string name="image_logo_label">Application Logo</string>
    <string name="login_button_text">REGISTER</string>
    <string name="google_signin_text">Login with</string>
    <string name="google_signin_or_text">or</string>
    <string name="register_text">REGISTER</string>
    <string name="login_label">LOGIN</string>
    <string name="insert_email_hint">Insert email</string>
    <string name="insert_password_hint">Insert password</string>
    <string name="reinsert_password_hint">Reinsert password</string>
    <string name="go_to_login_text">LOGIN</string>
    <string name="already_registered_text">Already registered?</string>
    <string name="logout_button_text">LOGOUT</string>
    <string name="user_settings">User</string>
    <string name="account_management">Accounts</string>
    <string name="categories">Categories</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transactions">Transactions</string>
    <string name="overview">Overview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_fragment_text">AccountFragment</string>
    <string name="overview_fragment_text">OverviewFragment</string>
    <string name="transactions_fragment_text">TransactionsFragment</string>
    <string name="user_fragment_text">UserFragment</string>
    <string name="login_image">Login Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="profile_user_savings_goal_text">Savings goal</string>
    <string name="profile_user_fixed_costs_text">Fixed costs</string>
    <string name="profile_maximum_expenses_text">Maximum expenses</string>
    <string name="profile_photo_label">Profile Photo</string>
    <string name="update_user_information">Update information</string>
    <string name="user_profile_image">User profile image</string>
    <string name="insert_savings_goal_hint">0</string>
    <string name="insert_fixed_costs_hint">0</string>
    <string name="insert_maximum_expenses_hint">0</string>
    <string name="zero_value">0</string>
    <string name="currency">\u20ac</string>
    <string name="take_photo_icon">Take Photo Icon</string>
    <string name="account_row_image">Account image</string>
    <string name="accounts_total_label">All accounts</string>
    <string name="add_account_name_input">Insert Name</string>
    <string name="add_category_name_input">Insert Category Name</string>
    <string name="add_account_description_input">Insert description</string>
    <string name="add_account_amount_input">Insert initial amount</string>
    <string name="save_account_button">SAVE</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="comma">.</string>
    <string name="insert_transaction">Insert</string>
    <string name="close">CLOSE</string>
    <string name="add">ADD</string>
    <string name="category_image">Category image</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="insert_note_hint">Insert note</string>
    <string name="balance">Balance</string>


</resources>