<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/user_settings"
        android:icon="@drawable/user_profile"
        android:title="@string/user_settings" />

    <item
        android:id="@+id/account_management"
        android:icon="@drawable/account_management"
        android:title="@string/account_management" />

    <item
        android:id="@+id/add_transaction"
        android:icon="@drawable/add_expense"
        android:title="@string/add_transaction" />

    <item
        android:id="@+id/transactions"
        android:icon="@drawable/transactions"
        android:title="@string/transactions" />

    <item
        android:id="@+id/overview"
        android:icon="@drawable/overview"
        android:title="@string/overview" />

</menu>